# duck_net

./: .gitignore  Cargo.toml  Makefile  QUACK_RS_GAPS.md  README.md  SECURITY.md  description.yml  test_e2e.py
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md  book.toml
docs/guides/: 01_http_retry_backoff.md  02_http_pagination_table_function.md  03_http_auth_helpers.md  04_dns_lookups.md  05_smtp_send.md  06_ftp_sftp.md  07_rest_soap_enterprise.md
docs/src/: SUMMARY.md  installation.md  introduction.md  quickstart.md  reference.md  roadmap.md
docs/src/configuration/: auth.md  rate-limiting.md  retries.md
docs/src/protocols/: certificates.md  dns.md  email.md  filetransfer.md  graphql.md  grpc.md  http.md  infrastructure.md  ldap.md  messaging.md  monitoring.md  network-utils.md  odata.md  redis.md  s3.md  service-discovery.md  soap.md  ssh.md  time.md  webdav.md  websocket.md
docs/src/security/: architecture.md  duckdb-secrets.md  hardening.md  secrets.md  ssrf.md  warnings.md
src/: amqp.rs  audit_log.rs  aws_sigv4.rs  bgp.rs  caldav.rs  consul.rs  dns.rs  doh.rs  duckdb_secrets_bridge.rs  elasticsearch.rs  features.rs  ftp.rs  ftp_cache.rs  graphql.rs  grpc.rs  grpc_reflect.rs  http.rs  imap.rs  imap_write.rs  influxdb.rs  ipmi.rs  json.rs  jsonrpc.rs  kafka.rs  ldap.rs  ldap_write.rs  ldap_write_async.rs  lib.rs  mdns.rs  memcached.rs  metadata.rs  mqtt.rs  nats.rs  ntp.rs  oauth2.rs  ocsp.rs  odata.rs  pagination.rs  ping.rs  prometheus.rs  (+27 more)
src/ffi/: amqp.rs  audit_log.rs  aws_sigv4.rs  bgp.rs  caldav.rs  consul.rs  dns.rs  doh.rs  duckdb_secrets_bridge.rs  elasticsearch.rs  features.rs  ftp.rs  graphql.rs  grpc.rs  imap.rs  imap_write.rs  influxdb.rs  ipmi.rs  jsonrpc.rs  kafka.rs  ldap.rs  mdns.rs  memcached.rs  mod.rs  mqtt.rs  nats.rs  ntp.rs  oauth2.rs  ocsp.rs  odata.rs  ping.rs  prometheus.rs  ptp.rs  radius.rs  redis_client.rs  s3.rs  scalars.rs  scalars_config.rs  scalars_register.rs  scp.rs  (+19 more)
