[package]
name = "duck_net"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
description = "DuckDB extension for comprehensive network client operations"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quack_rs = { version = "0.11", package = "quack-rs" }
libduckdb-sys = { version = "=1.10501.0", features = ["loadable-extension"] }
ureq = { version = "3.3", features = ["multipart", "platform-verifier"] }
base64 = "0.22"

# TLS (for SMTP STARTTLS + TLS inspection)
rustls = "0.23"
webpki-roots = "1"

# X.509 certificate parsing (TLS inspection)
x509-parser = "0.16"

# DNS resolution
hickory-resolver = { version = "0.25", features = ["system-config"] }

# FTP/FTPS
suppaftp = { version = "8", features = ["rustls-ring"] }

# SFTP (async, wrapped in blocking runtime)
russh = "0.58"
russh-sftp = "2.1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "net", "sync", "time", "macros"] }

# LDAP
ldap3 = "0.11"

# AWS SigV4 signing
hmac = "0.12"
sha2 = "0.10"

# AMQP (RabbitMQ)
lapin = "2"

# Kafka
rskafka = "0.5"
chrono = "0.4"

# WebSocket (one-shot)
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# gRPC (HTTP/2 transport)
h2 = "0.4"
http = "1"
bytes = "1"
tokio-rustls = "0.26"

# RADIUS authentication hashing
md5 = "0.7"

# SNMPv3 authentication (HMAC-SHA1 / HMAC-MD5 via digest traits)
sha1 = { version = "0.10", features = ["oid"] }
# md-5 renamed to avoid conflict with radius's md5 = "0.7" crate
md5_digest = { version = "0.10", package = "md-5" }

# Cryptographic random number generation
getrandom = "0.3"

# Secure memory zeroization (CWE-316)
zeroize = "1"
quick-xml = "0.37"
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
